samples/_failures_safe/1761662045_f7c0ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13a0bdcc.c: In function ‘main’:
./samples/SAFE/__tmp_13a0bdcc.c:160:5: error: expected expression at end of input
  160 |     if (!
      |     ^~
./samples/SAFE/__tmp_13a0bdcc.c:160:5: error: expected declaration or statement at end of input
